--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 server.error.include-message=always
 server.error.include-binding-errors=always
+
+# Datalayer configuration
+
+spring.h2.console.enabled=true
+
+spring.datasource.url=jdbc:h2:file:~/multiplication;DB_CLOSE_ON_EXIT=FALSE
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
