--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,5 @@ spring.datasource.url=jdbc:h2:file:~/multiplication;DB_CLOSE_ON_EXIT=FALSE
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-#spring.jackson.serialization.fail_on_empty_beans=false 
+service.gamification.host=http://localhost:8081
+
