--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,10 @@ spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:file:~/multiplication;DB_CLOSE_ON_EXIT=FALSE
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 
 service.gamification.host=http://localhost:8081
 
+#Messaging properties.
+amqp.exchange.attempts=attempts.topic
+logging.level.org.springframework.amqp.rabbit.core.RabbitAdmin = DEBUG
