--- a/Gamification/src/main/resources/application.properties
+++ b/Gamification/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:file:~/gamification;DB_CLOSE_ON_EXIT=FALSE
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true	
+
+#Messaging properties.
+amqp.exchange.attempts=attempts.topic
+amqp.queue.gamification=gamification.queue
+logging.level.org.springframework.amqp.rabbit.core.RabbitAdmin = DEBUG
