--- a/Gateway/pom.xml
+++ b/Gateway/pom.xml
@@ -3,9 +3,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.lockindev.multiplication.gateway</groupId>
-	<artifactId>multiplicationGateway</artifactId>
+	<artifactId>m_gateway</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>multiplicationGateway</name>
+	<name>m_gateway</name>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -29,6 +29,18 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-consul-discovery</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.cloud</groupId>
+					<artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
 	</dependencies>
 
 
