--- a/Gamification/pom.xml
+++ b/Gamification/pom.xml
@@ -60,6 +60,11 @@
 			</exclusions>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-consul-config</artifactId>
+		</dependency>
+		
 		<!-- Miscellaneous dependencies -->
 
 		<dependency>
