--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,14 @@ server.error.include-binding-errors=always
 
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:file:~/multiplication;DB_CLOSE_ON_EXIT=FALSE
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
+
 
 service.gamification.host=http://localhost:8081
 
 #Messaging properties.
 amqp.exchange.attempts=attempts.topic
 logging.level.org.springframework.amqp.rabbit.core.RabbitAdmin = DEBUG
+
+#health
+endpoints.health.sensitive = false
