--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,14 +6,24 @@ server.error.include-binding-errors=always
 
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:file:~/multiplication;DB_CLOSE_ON_EXIT=FALSE
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=none 
 
 
 service.gamification.host=http://localhost:8081
 
 #Messaging properties.
-amqp.exchange.attempts=attempts.topic
+spring.rabbitmq.host = localhost
+spring.rabbitmq.port = 5672
+spring.rabbitmq.username = lockin
+spring.rabbitmq.password = 12345 
+spring.rabbitmq.virtual-host= /
+amqp.exchange.attempts = attempts.topic
 logging.level.org.springframework.amqp.rabbit.core.RabbitAdmin = DEBUG
 
 #health
-endpoints.health.sensitive = false
+management.endpoint.health.show-details=always
+
+#Consul configuration#
+spring.cloud.consul.discovery.instanceId=${spring.application.name}:${random.value}
+spring.cloud.consul.host=consul
+spring.cloud.consul.port=8500
