--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>multiplicationSystem</name>
 
-	<parent> 
+	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.3.2.RELEASE</version>
@@ -69,6 +69,7 @@
 			<artifactId>spring-cloud-starter-consul-config</artifactId>
 		</dependency>
 
+
 		<!-- Miscellaneous dependencies -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -112,7 +113,8 @@
 						<manifest>
 							<addClasspath>true</addClasspath>
 							<classpathPrefix>lib/</classpathPrefix>
-							<mainClass>com.devlockin.multiplication.MultiplicationApplication</mainClass>
+							<mainClass>com.devlockin.multiplication.MultiplicationApplication
+							</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
