--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,21 @@
 version: "3.2"
 services:
-  rabbitmq: 
+   nginx:
+    image: nginx:latest
+    container_name: nginx
+    links:
+       - consul
+    ports:
+       - "8080:8080"
+   consul:
+    command: -server -bootstrap -advertise ${HOST_IP}
+    image: progrium/consul
+    container_name: consul
+    logging:
+        driver: json-file
+    ports:
+      - "8500:8500"
+   rabbitmq:
     command: sh -c "rabbitmq-plugins enable rabbitmq_management; rabbitmq-server"
     image: rabbitmq:3-management-alpine
     container_name: 'rabbitmq'
@@ -12,6 +27,7 @@ services:
         - ~/.docker-conf/rabbitmq/log/:/var/log/rabbitmq
     networks:
         - rabbitmq_go_net
+    
 
 networks:
   rabbitmq_go_net:
